--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <style>
 /* ---------- THEME ---------- */
 :root{
-  --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640; --ink:#e6ecff; --muted:#92a0c5;
+  --bg-0:#04060b; --bg-1:#05070d; --bg-2:#0b1220;
+  --line:#19233c; --ink:#e6ecff; --muted:#92a0c5;
   --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
-  --success:#24ff90; --scan:rgba(17,177,255,.45);
+  --success:#24ff90;
 }
 
 /* ---------- RESET / QUALITY ---------- */
@@ -24,32 +25,40 @@
 html,body{height:100%}
 body{
   min-height:100vh; display:flex; flex-direction:column; color:var(--ink);
-  background: radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
-              linear-gradient(120deg, var(--bg-1), var(--bg-2));
-  overflow-x:hidden;
+  background-color:var(--bg-0); /* avoids flash */
   font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
   -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; text-rendering:optimizeLegibility;
+  overflow-x:hidden;
 }
-/* ambience */
+
+/* --- Smooth cosmic backdrop (no harsh edges) --- */
 body::before{
-  content:""; position:fixed; inset:-20%; pointer-events:none; z-index:-1;
+  content:""; position:fixed; inset:-15% -15% -15% -15%; pointer-events:none; z-index:-2;
   background:
-    radial-gradient(60% 40% at 20% 20%, rgba(17,177,255,.08), transparent 60%),
-    radial-gradient(50% 35% at 80% 10%, rgba(110,231,255,.06), transparent 60%),
-    radial-gradient(60% 45% at 60% 80%, rgba(17,177,255,.05), transparent 70%);
-  animation:floatSheen 26s ease-in-out infinite alternate; filter:saturate(1.05);
+    radial-gradient(1400px 900px at 12% -8%, rgba(16,30,60,.72) 0%, rgba(9,14,26,.55) 45%, rgba(7,10,18,.0) 80%),
+    radial-gradient(1100px 800px at 80% 10%, rgba(20,55,90,.55) 0%, rgba(10,18,36,.35) 50%, rgba(7,10,18,.0) 85%),
+    radial-gradient(1200px 900px at 60% 85%, rgba(14,28,55,.40) 0%, rgba(9,14,27,.22) 55%, rgba(7,10,18,0) 92%),
+    linear-gradient(120deg, var(--bg-1), var(--bg-2));
+  filter:saturate(1.05);
 }
-@keyframes floatSheen{
-  0%{transform:translate3d(0,0,0) scale(1)}
-  50%{transform:translate3d(-2%,1%,0) scale(1.02)}
-  100%{transform:translate3d(2%,-1%,0) scale(1.02)}
+
+/* Film grain (dither) to prevent banding on OLED/gradients */
+body::after{
+  content:""; position:fixed; inset:0; z-index:-1; pointer-events:none;
+  background-image:
+    radial-gradient(1px 1px at 15% 12%, rgba(255,255,255,.035) 0, transparent 55%),
+    radial-gradient(1px 1px at 35% 78%, rgba(255,255,255,.03) 0, transparent 55%),
+    radial-gradient(1px 1px at 72% 32%, rgba(255,255,255,.032) 0, transparent 55%),
+    radial-gradient(1px 1px at 88% 64%, rgba(255,255,255,.028) 0, transparent 55%),
+    radial-gradient(1px 1px at 52% 52%, rgba(0,0,0,.035) 0, transparent 55%);
+  opacity:.28; mix-blend-mode:overlay;
 }
 
 /* ---------- SPLASH ---------- */
 .splash{
   position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
   background:
-    radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
+    radial-gradient(1150px 820px at 50% -20%, rgba(12,19,37,.98) 0%, rgba(7,10,18,.96) 70%, rgba(5,7,13,.96) 100%),
     linear-gradient(120deg, var(--bg-1), var(--bg-2));
   opacity:1; visibility:visible;
   transition:opacity .7s ease, visibility .7s ease;
@@ -58,66 +67,60 @@ body::before{
 .splash.is-hidden{opacity:0; visibility:hidden}
 
 .splash__stack{display:flex;flex-direction:column;align-items:center;gap:18px; position:relative}
+
+/* Calmer & slower pulse */
 .splash__logo{
   width:184px; height:auto; border-radius:26px;
-  box-shadow:0 20px 48px var(--glow), 0 0 0 1px rgba(255,255,255,.06) inset;
-  animation:doublePulse 1.8s ease-in-out infinite;
+  box-shadow:0 16px 40px var(--glow), 0 0 0 1px rgba(255,255,255,.06) inset;
+  animation:softPulse 3.2s ease-in-out infinite;
   filter:drop-shadow(0 8px 18px rgba(0,0,0,.45));
 }
+@keyframes softPulse{
+  0%   { transform:translateY(0) scale(1) }
+  18%  { transform:translateY(-0.5px) scale(1.015) }
+  36%  { transform:translateY(0) scale(1) }
+  54%  { transform:translateY(-0.5px) scale(1.012) }
+  100% { transform:translateY(0) scale(1) }
+}
 
-/* ACCESS APPROVED module */
+/* ACCESS APPROVED (kept, but calmer) */
 .approved{
   font-family:'Orbitron',sans-serif; letter-spacing:2px; text-transform:uppercase;
-  color:var(--success); font-size:0.95rem; line-height:1;
+  color:var(--success); font-size:0.92rem; line-height:1;
   opacity:0; transform:translateY(6px) scale(.98);
   transition:opacity .35s ease, transform .35s ease;
   text-shadow:0 0 10px var(--success), 0 0 20px var(--success);
-  position:relative; padding:.6rem 1rem; border-radius:10px;
+  position:relative; padding:.55rem .9rem; border-radius:10px;
   background:linear-gradient(180deg, rgba(10,20,30,.35), rgba(8,14,24,.2));
-  border:1px solid rgba(120,220,170,.25);
+  border:1px solid rgba(120,220,170,.22);
   overflow:hidden;
 }
 .approved.visible{opacity:1; transform:translateY(0) scale(1)}
-/* scanning bar */
 .approved::before{
   content:""; position:absolute; left:0; right:0; height:2px; top:0;
-  background:linear-gradient(90deg, transparent, var(--scan), transparent);
-  transform:translateY(-100%);
-  animation:scan 1.6s ease-out .1s forwards;
+  background:linear-gradient(90deg, transparent, rgba(17,177,255,.35), transparent);
+  transform:translateY(-100%); animation:scan 1.4s ease-out .05s forwards;
 }
 @keyframes scan{
   0%{transform:translateY(-100%)}
   60%{transform:translateY(calc(100% - 2px))}
   100%{transform:translateY(calc(100% - 2px))}
 }
-/* tiny brackets */
-.approved .br{opacity:.8; color:#7bf3bf}
+.skip-hint{font-size:12px; color:#8aa6d6; opacity:.55; margin-top:4px}
 
-/* skip hint (click to skip animation) */
-.skip-hint{
-  font-size:12px; color:#8aa6d6; opacity:.55; margin-top:4px;
-}
-.skip-hint kbd{padding:0 4px;border:1px solid rgba(255,255,255,.2); border-radius:4px; font-size:11px}
-
-/* pulses */
-@keyframes doublePulse{
-  0%   { transform:translateY(0) scale(1) }
-  10%  { transform:translateY(-1px) scale(1.06) }
-  20%  { transform:translateY(0) scale(1) }
-  35%  { transform:translateY(-1px) scale(1.04) }
-  50%  { transform:translateY(0) scale(1) }
-  100% { transform:translateY(0) scale(1) }
-}
-
+/* Reduced motion */
 @media (prefers-reduced-motion: reduce){
   .splash__logo{animation:none}
   .approved::before{animation:none}
   .splash{transition:none}
 }
 
-/* ---------- PAGE LAYOUT (your original styles) ---------- */
-.wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%;
-  opacity:0; transform:translateY(8px); transition:opacity .6s ease, transform .6s ease}
+/* ---------- PAGE LAYOUT (your originals) ---------- */
+.wrap{
+  max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%;
+  opacity:0; transform:translateY(8px);
+  transition:opacity .6s ease, transform .6s ease;
+}
 .app-ready .wrap{opacity:1;transform:none}
 
 header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
@@ -131,6 +134,7 @@ header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-botto
 }
 @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 .logo-text p{color:var(--muted);font-size:13px}
+
 main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
 .content{flex:1 1 460px}
 h2{
@@ -151,7 +155,7 @@ li{margin-bottom:8px}
 
 /* Card */
 .card{
-  flex:1 1 330px;background:linear-gradient(180deg,#0e1322,#0d1220);
+  flex:1 1 330px;background:linear-gradient(180deg,rgba(14,19,34,.9),rgba(13,18,32,.82));
   border:1px solid var(--line);border-radius:18px;padding:22px;
   box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05);
 }
@@ -167,11 +171,11 @@ li{margin-bottom:8px}
 /* Footer */
 footer{
   position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px;
-  padding:18px 18px; background:rgba(0,10,20,.28); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px;
+  padding:18px 18px; background:rgba(3,6,12,.38); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px;
 }
 footer::before{
   content:""; position:absolute; left:0; right:0; top:0; height:1px;
-  background:linear-gradient(90deg,transparent,var(--accent),transparent); opacity:.65;
+  background:linear-gradient(90deg,transparent,var(--accent),transparent); opacity:.55;
 }
 footer a{color:var(--ink); position:relative}
 footer a::after{
@@ -181,6 +185,28 @@ footer a::after{
 }
 footer a:hover::after{transform:scaleX(1)}
 
+/* ---------- FANCY FUTURISTIC REVEAL ---------- */
+/* We animate blocks once .app-ready lands */
+.fx-seq>*{ --d:0ms; opacity:0; transform:translateY(8px); filter:blur(6px); }
+.app-ready .fx-seq>*{
+  animation:irisReveal .8s cubic-bezier(.2,.7,.2,1) var(--d) forwards,
+           blurOut .65s ease var(--d) forwards;
+}
+@keyframes irisReveal{
+  0%{ clip-path:inset(52% 50% 48% 50% round 10px); }
+  100%{ clip-path:inset(0 0 0 0 round 0) ; opacity:1; transform:none; }
+}
+@keyframes blurOut{
+  0%{ filter:blur(6px) }
+  100%{ filter:blur(0) }
+}
+
+/* Stagger helpers */
+.delay-1{ --d:60ms } .delay-2{ --d:140ms } .delay-3{ --d:220ms } .delay-4{ --d:300ms }
+
+@media (prefers-reduced-motion: reduce){
+  .fx-seq>*{opacity:1;transform:none;filter:none;animation:none}
+}
 @media (max-width:960px){
   .wrap{padding:24px 16px}
   main{flex-direction:column}
@@ -202,24 +228,24 @@ footer a:hover::after{transform:scaleX(1)}
     <div class="splash__stack">
       <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
       <div class="approved" id="approved">
-        <span class="br">[</span> ACCESS&nbsp;APPROVED <span class="br">]</span>
-        <div class="skip-hint">Click anywhere to skip</div>
+        <span>[</span> ACCESS&nbsp;APPROVED <span>]</span>
+        <div class="skip-hint">Tap anywhere to skip</div>
       </div>
     </div>
   </div>
 
   <!-- Main content -->
   <div class="wrap" id="app">
-    <header>
-      <div class="logo"><img src="assets/logo.png" alt="F1 Cash Logo"></div>
-      <div class="logo-text">
+    <header class="fx-seq">
+      <div class="logo delay-1"><img src="assets/logo.png" alt="F1 Cash Logo"></div>
+      <div class="logo-text delay-2">
         <h1>F1 CASH</h1>
         <p>Simple Business Funding</p>
       </div>
     </header>
 
-    <main>
-      <div class="content">
+    <main class="fx-seq">
+      <div class="content delay-2">
         <h2>Fast working capital for small businesses</h2>
         <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
         <ul>
@@ -231,7 +257,7 @@ footer a:hover::after{transform:scaleX(1)}
         <p class="note">Button disabled for now — application link coming soon.</p>
       </div>
 
-      <aside class="card" aria-label="At-a-glance terms">
+      <aside class="card delay-3" aria-label="At-a-glance terms">
         <h3>At-a-glance terms</h3>
         <div class="row"><span class="label">Typical advance</span><span class="value">$300 – $1,000</span></div>
         <div class="row"><span class="label">Schedule</span><span class="value">6 monthly payments</span></div>
@@ -258,8 +284,8 @@ footer a:hover::after{transform:scaleX(1)}
   </div>
 
   <!-- Footer -->
-  <footer>
-    <div>
+  <footer class="fx-seq">
+    <div class="delay-3">
       <span class="icon" aria-hidden="true">
         <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
       </span>
@@ -270,10 +296,10 @@ footer a:hover::after{transform:scaleX(1)}
       </span>
       &nbsp;<a href="tel:+12294484389">+1 229-448-4389</a>
     </div>
-    <div>© 2025 F1 Cash · All rights reserved.</div>
+    <div class="delay-4">© 2025 F1 Cash · All rights reserved.</div>
   </footer>
 
-  <!-- Splash controller (bulletproof) -->
+  <!-- Splash controller -->
   <script>
   (function(){
     var reduce = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
@@ -281,7 +307,6 @@ footer a:hover::after{transform:scaleX(1)}
     var approved = document.getElementById('approved');
 
     function reveal(){
-      // reveal content and hide splash (with extra fallback)
       document.body.classList.add('app-ready');
       if (splash){ splash.classList.add('is-fading'); }
       var done = false;
@@ -294,26 +319,25 @@ footer a:hover::after{transform:scaleX(1)}
       setTimeout(hide, 900); // hard fallback
     }
 
-    // Skip on click anywhere
+    // Click / tap anywhere to skip
     document.addEventListener('pointerdown', reveal, { once:true });
 
     if (reduce){
-      // No animation path
       reveal();
       return;
     }
 
-    // Timed sequence: show "ACCESS APPROVED", then reveal
-    var SHOW_APPROVED_AT = 700;   // ms after load
-    var REVEAL_AT        = 1900;  // ms after load
+    // Timed sequence
+    var SHOW_APPROVED_AT = 800;   // ms after load
+    var REVEAL_AT        = 2200;  // ms after load
 
-    setTimeout(function(){ if(approved){ approved.classList.add('visible'); } }, SHOW_APPROVED_AT);
+    setTimeout(function(){ approved && approved.classList.add('visible'); }, SHOW_APPROVED_AT);
     setTimeout(reveal, REVEAL_AT);
 
-    // Absolute final safety: ensure reveal even if timers get throttled
+    // Absolute safety
     setTimeout(function(){
       if (!document.body.classList.contains('app-ready')) reveal();
-    }, 4000);
+    }, 5000);
   })();
   </script>
 </body>
