--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 /* ---------- THEME ---------- */
 :root{
   --bg-0:#04060b; --bg-1:#05070d; --bg-2:#0b1220;
-  --line:#19233c; --ink:#e6ecff; --muted:#92a0c5;
+  --line:#18233a; --ink:#e6ecff; --muted:#95a7cf;
   --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
   --success:#24ff90;
 }
@@ -24,16 +24,16 @@
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{height:100%}
 body{
-  min-height:100vh; display:flex; flex-direction:column; color:var(--ink);
-  background-color:var(--bg-0); /* avoids flash */
+  color:var(--ink);
+  background-color:var(--bg-0);
   font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
   -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; text-rendering:optimizeLegibility;
   overflow-x:hidden;
 }
 
-/* --- Smooth cosmic backdrop (no harsh edges) --- */
+/* Smooth cosmic backdrop + film grain (kills banding) */
 body::before{
-  content:""; position:fixed; inset:-15% -15% -15% -15%; pointer-events:none; z-index:-2;
+  content:""; position:fixed; inset:-15% -15% -15% -15%; z-index:-2; pointer-events:none;
   background:
     radial-gradient(1400px 900px at 12% -8%, rgba(16,30,60,.72) 0%, rgba(9,14,26,.55) 45%, rgba(7,10,18,.0) 80%),
     radial-gradient(1100px 800px at 80% 10%, rgba(20,55,90,.55) 0%, rgba(10,18,36,.35) 50%, rgba(7,10,18,.0) 85%),
@@ -41,8 +41,6 @@ body::before{
     linear-gradient(120deg, var(--bg-1), var(--bg-2));
   filter:saturate(1.05);
 }
-
-/* Film grain (dither) to prevent banding on OLED/gradients */
 body::after{
   content:""; position:fixed; inset:0; z-index:-1; pointer-events:none;
   background-image:
@@ -53,6 +51,60 @@ body::after{
     radial-gradient(1px 1px at 52% 52%, rgba(0,0,0,.035) 0, transparent 55%);
   opacity:.28; mix-blend-mode:overlay;
 }
+
+/* ---------- STICKY HEADER (optional, minimal) ---------- */
+.topbar{
+  position:sticky; top:0; z-index:50;
+  display:flex; align-items:center; gap:14px;
+  padding:10px 18px;
+  background:linear-gradient(180deg, rgba(6,10,20,.72), rgba(6,10,20,.35));
+  backdrop-filter:saturate(120%) blur(6px);
+  border-bottom:1px solid rgba(150,190,255,.10);
+}
+.topbar .brand{
+  display:flex; align-items:center; gap:12px;
+  padding:6px 10px; border-radius:14px;
+  position:relative; background:linear-gradient(180deg, rgba(14,24,42,.45), rgba(10,16,28,.25));
+  border:1px solid rgba(120,170,240,.16);
+  box-shadow:inset 0 0 1px rgba(255,255,255,.05), 0 8px 22px rgba(0,0,0,.35);
+}
+.brand .logo-tile{
+  position:relative; width:44px; height:44px; border-radius:12px; overflow:hidden;
+  box-shadow:0 10px 24px rgba(17,177,255,.22);
+  background:radial-gradient(120% 120% at 30% 30%, rgba(8,180,255,.3), rgba(6,12,22,.0) 60%), #081018;
+}
+/* place the actual image centered; blends with tile */
+.brand .logo-tile img{
+  width:100%; height:100%; object-fit:cover; mix-blend-mode:screen; opacity:.95; filter:contrast(1.05) saturate(1.05);
+}
+/* orbiting light around tile */
+.brand .logo-tile::before{
+  content:""; position:absolute; inset:-6px; border-radius:16px;
+  background:conic-gradient(from 0deg, rgba(17,177,255,.0), rgba(17,177,255,.75), rgba(110,231,255,.0) 60%, rgba(17,177,255,.0));
+  -webkit-mask: radial-gradient(closest-side, transparent 78%, #000 79% 100%);
+          mask: radial-gradient(closest-side, transparent 78%, #000 79% 100%);
+  animation:orbit 6.5s linear infinite;
+  filter:blur(1.2px) drop-shadow(0 0 6px rgba(17,177,255,.35));
+}
+@keyframes orbit{ to{ transform:rotate(360deg) } }
+
+.brand .title h1{
+  font-family:'Orbitron',sans-serif; font-size:16px; font-weight:700;
+  letter-spacing:.6px; margin:0;
+  background:linear-gradient(90deg,var(--accent),var(--accent2));
+  -webkit-background-clip:text; background-clip:text; color:transparent;
+}
+.brand .title p{margin:0; font-size:12px; color:var(--muted)}
+
+.topbar .nav{
+  margin-left:auto; display:flex; align-items:center; gap:12px;
+}
+.topbar .nav a{
+  color:#cfe6ff; text-decoration:none; font-weight:600; font-size:13px;
+  padding:8px 12px; border-radius:10px; border:1px solid rgba(120,170,240,.12);
+  background:linear-gradient(180deg, rgba(12,20,36,.35), rgba(8,14,26,.22));
+}
+.topbar .nav a:hover{border-color:rgba(120,170,240,.28)}
 
 /* ---------- SPLASH ---------- */
 .splash{
@@ -66,11 +118,9 @@ body::after{
 .splash.is-fading{opacity:0}
 .splash.is-hidden{opacity:0; visibility:hidden}
 
-.splash__stack{display:flex;flex-direction:column;align-items:center;gap:18px; position:relative}
-
-/* Calmer & slower pulse */
+.splash__stack{display:flex;flex-direction:column;align-items:center;gap:18px}
 .splash__logo{
-  width:184px; height:auto; border-radius:26px;
+  width:184px; border-radius:26px;
   box-shadow:0 16px 40px var(--glow), 0 0 0 1px rgba(255,255,255,.06) inset;
   animation:softPulse 3.2s ease-in-out infinite;
   filter:drop-shadow(0 8px 18px rgba(0,0,0,.45));
@@ -83,48 +133,37 @@ body::after{
   100% { transform:translateY(0) scale(1) }
 }
 
-/* ACCESS APPROVED (kept, but calmer) */
+/* ACCESS APPROVED (kept but subtle) */
 .approved{
   font-family:'Orbitron',sans-serif; letter-spacing:2px; text-transform:uppercase;
-  color:var(--success); font-size:0.92rem; line-height:1;
+  color:var(--success); font-size:.9rem;
   opacity:0; transform:translateY(6px) scale(.98);
   transition:opacity .35s ease, transform .35s ease;
   text-shadow:0 0 10px var(--success), 0 0 20px var(--success);
-  position:relative; padding:.55rem .9rem; border-radius:10px;
+  padding:.5rem .9rem; border-radius:10px;
   background:linear-gradient(180deg, rgba(10,20,30,.35), rgba(8,14,24,.2));
   border:1px solid rgba(120,220,170,.22);
-  overflow:hidden;
 }
 .approved.visible{opacity:1; transform:translateY(0) scale(1)}
-.approved::before{
-  content:""; position:absolute; left:0; right:0; height:2px; top:0;
-  background:linear-gradient(90deg, transparent, rgba(17,177,255,.35), transparent);
-  transform:translateY(-100%); animation:scan 1.4s ease-out .05s forwards;
-}
-@keyframes scan{
-  0%{transform:translateY(-100%)}
-  60%{transform:translateY(calc(100% - 2px))}
-  100%{transform:translateY(calc(100% - 2px))}
-}
-.skip-hint{font-size:12px; color:#8aa6d6; opacity:.55; margin-top:4px}
-
-/* Reduced motion */
 @media (prefers-reduced-motion: reduce){
-  .splash__logo{animation:none}
-  .approved::before{animation:none}
-  .splash{transition:none}
+  .splash{transition:none} .splash__logo{animation:none}
 }
 
-/* ---------- PAGE LAYOUT (your originals) ---------- */
-.wrap{
-  max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%;
-  opacity:0; transform:translateY(8px);
-  transition:opacity .6s ease, transform .6s ease;
+/* ---------- PAGE LAYOUT ---------- */
+.wrap{max-width:1080px;margin:0 auto;padding:18px 18px; width:100%;}
+/* no flex filler -> footer sits just after content */
+header{display:flex;align-items:center;gap:16px;padding:18px 0 22px;border-bottom:1px solid var(--line)}
+.logo{position:relative; width:86px; height:86px; border-radius:18px; overflow:hidden;}
+.logo img{ width:100%; height:100%; object-fit:cover; mix-blend-mode:screen; opacity:.95; filter:contrast(1.05) saturate(1.05); }
+/* same orbit on header logo for consistency */
+.logo::before{
+  content:""; position:absolute; inset:-8px; border-radius:24px;
+  background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(17,177,255,.7), rgba(110,231,255,0) 60%, rgba(17,177,255,0));
+  -webkit-mask: radial-gradient(closest-side, transparent 78%, #000 79% 100%);
+          mask: radial-gradient(closest-side, transparent 78%, #000 79% 100%);
+  animation:orbit 7.2s linear infinite; filter:blur(1.2px);
 }
-.app-ready .wrap{opacity:1;transform:none}
 
-header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
-.logo img{ width:94px;height:auto;border-radius:18px; box-shadow:0 10px 24px rgba(17,177,255,.22); }
 .logo-text h1{
   font-family:'Orbitron',sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;
   background:linear-gradient(90deg,var(--accent),var(--accent2));
@@ -135,7 +174,7 @@ header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-botto
 @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 .logo-text p{color:var(--muted);font-size:13px}
 
-main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
+main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:32px;padding:24px 0}
 .content{flex:1 1 460px}
 h2{
   font-family:'Orbitron',sans-serif; font-weight:800; font-size:44px; line-height:1.12;
@@ -163,21 +202,17 @@ li{margin-bottom:8px}
 .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
 .label{color:var(--muted);font-size:13px}
 .value{font-weight:700}
-
-/* Icons */
 .icon{width:16px;height:16px;display:inline-block;vertical-align:-2px}
 .icon svg{width:16px;height:16px;display:block}
 
-/* Footer */
+/* Footer (closer to content) */
 footer{
-  position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px;
-  padding:18px 18px; background:rgba(3,6,12,.38); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px;
+  margin-top:18px;
+  display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px;
+  padding:16px 18px; background:rgba(3,6,12,.38); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px;
+  border-top:1px solid rgba(150,190,255,.10);
 }
-footer::before{
-  content:""; position:absolute; left:0; right:0; top:0; height:1px;
-  background:linear-gradient(90deg,transparent,var(--accent),transparent); opacity:.55;
-}
-footer a{color:var(--ink); position:relative}
+footer a{color:var(--ink); position:relative; text-decoration:none}
 footer a::after{
   content:""; position:absolute; left:0; right:0; bottom:-2px; height:1px;
   background:linear-gradient(90deg,transparent,var(--accent),transparent);
@@ -185,67 +220,74 @@ footer a::after{
 }
 footer a:hover::after{transform:scaleX(1)}
 
-/* ---------- FANCY FUTURISTIC REVEAL ---------- */
-/* We animate blocks once .app-ready lands */
-.fx-seq>*{ --d:0ms; opacity:0; transform:translateY(8px); filter:blur(6px); }
-.app-ready .fx-seq>*{
-  animation:irisReveal .8s cubic-bezier(.2,.7,.2,1) var(--d) forwards,
-           blurOut .65s ease var(--d) forwards;
+/* ---------- PIXEL REVEAL OVERLAY ---------- */
+.pixel-overlay{
+  position:fixed; inset:0; z-index:30; pointer-events:none; display:grid;
+  grid-template-columns:repeat(var(--px-cols,16),1fr);
+  grid-template-rows:repeat(var(--px-rows,10),1fr);
 }
-@keyframes irisReveal{
-  0%{ clip-path:inset(52% 50% 48% 50% round 10px); }
-  100%{ clip-path:inset(0 0 0 0 round 0) ; opacity:1; transform:none; }
+.pixel-overlay .px{
+  background:linear-gradient(180deg, rgba(18,26,44,.92), rgba(12,18,34,.9));
+  border:1px solid rgba(120,170,240,.06);
+  opacity:1; transition:opacity .38s ease, transform .38s ease; will-change:opacity,transform;
 }
-@keyframes blurOut{
-  0%{ filter:blur(6px) }
-  100%{ filter:blur(0) }
-}
+.pixel-overlay.out .px{ opacity:0; transform:scale(1.04); }
 
-/* Stagger helpers */
-.delay-1{ --d:60ms } .delay-2{ --d:140ms } .delay-3{ --d:220ms } .delay-4{ --d:300ms }
-
-@media (prefers-reduced-motion: reduce){
-  .fx-seq>*{opacity:1;transform:none;filter:none;animation:none}
-}
+/* Responsive bits */
 @media (max-width:960px){
-  .wrap{padding:24px 16px}
+  .wrap{padding:12px 14px}
   main{flex-direction:column}
   h2{font-size:36px}
-  .logo img{width:86px}
-  .splash__logo{width:168px}
+  .logo{width:78px;height:78px}
 }
 @media (max-width:520px){
   h2{font-size:30px}
   .card{padding:18px}
-  .splash__logo{width:148px}
+  .logo{width:72px;height:72px}
 }
 </style>
 </head>
 
 <body>
+  <!-- Sticky header -->
+  <div class="topbar">
+    <div class="brand">
+      <div class="logo-tile"><img src="assets/logo.png" alt=""></div>
+      <div class="title">
+        <h1>F1 CASH</h1>
+        <p>Simple Business Funding</p>
+      </div>
+    </div>
+    <nav class="nav">
+      <a href="#terms">Terms</a>
+      <a href="mailto:info@f1cash.net">Contact</a>
+      <a href="#" aria-disabled="true" title="Coming soon">Apply</a>
+    </nav>
+  </div>
+
   <!-- Splash -->
   <div class="splash" id="splash" aria-hidden="true">
     <div class="splash__stack">
       <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
-      <div class="approved" id="approved">
-        <span>[</span> ACCESS&nbsp;APPROVED <span>]</span>
-        <div class="skip-hint">Tap anywhere to skip</div>
-      </div>
+      <div class="approved" id="approved">ACCESS APPROVED</div>
     </div>
   </div>
 
+  <!-- Pixel overlay (for content reveal) -->
+  <div class="pixel-overlay" id="pixelOverlay" style="--px-cols:16;--px-rows:10" aria-hidden="true"></div>
+
   <!-- Main content -->
   <div class="wrap" id="app">
-    <header class="fx-seq">
-      <div class="logo delay-1"><img src="assets/logo.png" alt="F1 Cash Logo"></div>
-      <div class="logo-text delay-2">
+    <header>
+      <div class="logo"><img src="assets/logo.png" alt="F1 Cash Logo"></div>
+      <div class="logo-text">
         <h1>F1 CASH</h1>
         <p>Simple Business Funding</p>
       </div>
     </header>
 
-    <main class="fx-seq">
-      <div class="content delay-2">
+    <main>
+      <div class="content">
         <h2>Fast working capital for small businesses</h2>
         <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
         <ul>
@@ -257,7 +299,7 @@ footer a:hover::after{transform:scaleX(1)}
         <p class="note">Button disabled for now — application link coming soon.</p>
       </div>
 
-      <aside class="card delay-3" aria-label="At-a-glance terms">
+      <aside class="card" id="terms" aria-label="At-a-glance terms">
         <h3>At-a-glance terms</h3>
         <div class="row"><span class="label">Typical advance</span><span class="value">$300 – $1,000</span></div>
         <div class="row"><span class="label">Schedule</span><span class="value">6 monthly payments</span></div>
@@ -283,9 +325,9 @@ footer a:hover::after{transform:scaleX(1)}
     </main>
   </div>
 
-  <!-- Footer -->
-  <footer class="fx-seq">
-    <div class="delay-3">
+  <!-- Footer (now close to content) -->
+  <footer>
+    <div>
       <span class="icon" aria-hidden="true">
         <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
       </span>
@@ -296,48 +338,72 @@ footer a:hover::after{transform:scaleX(1)}
       </span>
       &nbsp;<a href="tel:+12294484389">+1 229-448-4389</a>
     </div>
-    <div class="delay-4">© 2025 F1 Cash · All rights reserved.</div>
+    <div>© 2025 F1 Cash · All rights reserved.</div>
   </footer>
 
-  <!-- Splash controller -->
+  <!-- Controllers: splash + pixel reveal -->
   <script>
   (function(){
     var reduce = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
     var splash = document.getElementById('splash');
     var approved = document.getElementById('approved');
+    var pixelOverlay = document.getElementById('pixelOverlay');
 
-    function reveal(){
+    // Build pixel grid once
+    (function buildPixels(){
+      var cols = parseInt(getComputedStyle(pixelOverlay).getPropertyValue('--px-cols')) || 16;
+      var rows = parseInt(getComputedStyle(pixelOverlay).getPropertyValue('--px-rows')) || 10;
+      var frag = document.createDocumentFragment();
+      for (var r=0; r<rows; r++){
+        for (var c=0; c<cols; c++){
+          var cell = document.createElement('div');
+          cell.className = 'px';
+          // randomized delay so it dissolves like pixels
+          var delay = (Math.random()*420 + (r*6 + c*4));
+          cell.style.transitionDelay = delay+'ms';
+          frag.appendChild(cell);
+        }
+      }
+      pixelOverlay.appendChild(frag);
+    })();
+
+    function hideSplash(){
       document.body.classList.add('app-ready');
       if (splash){ splash.classList.add('is-fading'); }
-      var done = false;
-      function hide(){ if(done) return; done = true; if(splash){ splash.classList.add('is-hidden'); } }
+      var done=false; function end(){ if(done) return; done=true; splash && splash.classList.add('is-hidden'); startPixelReveal(); }
       if (splash){
         splash.addEventListener('transitionend', function onEnd(e){
-          if (e.propertyName === 'opacity'){ splash.removeEventListener('transitionend', onEnd); hide(); }
+          if (e.propertyName === 'opacity'){ splash.removeEventListener('transitionend', onEnd); end(); }
         });
       }
-      setTimeout(hide, 900); // hard fallback
+      setTimeout(end, 900);
     }
 
-    // Click / tap anywhere to skip
-    document.addEventListener('pointerdown', reveal, { once:true });
+    function startPixelReveal(){
+      // trigger the "pixels fade out" overlay
+      requestAnimationFrame(function(){
+        pixelOverlay.classList.add('out');
+        // remove overlay after animations
+        setTimeout(function(){ pixelOverlay.parentNode && pixelOverlay.parentNode.removeChild(pixelOverlay); }, 1200);
+      });
+    }
+
+    // allow tap/click anywhere to skip straight to reveal
+    document.addEventListener('pointerdown', function once(){ hideSplash(); document.removeEventListener('pointerdown', once); }, { once:true });
 
     if (reduce){
-      reveal();
+      hideSplash();
       return;
     }
 
-    // Timed sequence
-    var SHOW_APPROVED_AT = 800;   // ms after load
-    var REVEAL_AT        = 2200;  // ms after load
+    // Timed sequence for splash
+    setTimeout(function(){ approved && approved.classList.add('visible'); }, 700);
+    setTimeout(hideSplash, 2100);
 
-    setTimeout(function(){ approved && approved.classList.add('visible'); }, SHOW_APPROVED_AT);
-    setTimeout(reveal, REVEAL_AT);
-
-    // Absolute safety
+    // Absolute safety: bail out no matter what
     setTimeout(function(){
-      if (!document.body.classList.contains('app-ready')) reveal();
-    }, 5000);
+      if (!document.body.classList.contains('app-ready')) hideSplash();
+    }, 4500);
   })();
   </script>
 </body>
